Replace gesture fullscreen and fix HUD overlap

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -39,6 +39,7 @@
         <button id="menuHangarBtn" class="btnGhost">Hangar</button>
         <button id="menuLeaderboardBtn" class="btnGhost">Leaderboard</button>
         <button id="menuOnlineBtn" class="btnGhost">Online</button>
+        <button id="sideFullscreenBtn" class="btnGhost">Fullscreen</button>
         <button id="menuResetBtn" class="btnGhost">Reset Progress</button>
         <div class="fine" style="margin:10px 6px 0">Tip: Sign in to save upgrades and purchases.</div>
       </div>
@@ -116,6 +117,7 @@
           <button id="hangarBtn">Hangar & Upgrades</button>
           <button id="leaderboardBtn">Leaderboard</button>
           <button id="onlineBtn">Online Duel (Beta)</button>
+          <button id="menuFullscreenBtn">Fullscreen</button>
         </div>
         <div class="fine">
           Tip: Collect upgrade orbs mid-run. Spend Credits/Crystals in the Hangar.
