Add fullscreen hint on play

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -288,6 +288,8 @@
         </div>
       </div>
     </div>
+
+    <div id="fsHint" class="fsHint hidden">Tip: Fullscreen is more comfortable. Press F on desktop or use the Fullscreen button on mobile.</div>
   </div>
 
   <canvas id="game" width="960" height="600"></canvas>
