Add info page and ad reward flow

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -40,6 +40,7 @@
         <button id="menuLeaderboardBtn" class="btnGhost">Leaderboard</button>
         <button id="menuOnlineBtn" class="btnGhost">Online</button>
         <button id="sideFullscreenBtn" class="btnGhost">Fullscreen</button>
+        <button id="sideInfoBtn" class="btnGhost">Game Info</button>
         <button id="menuResetBtn" class="btnGhost">Reset Progress</button>
         <div class="fine" style="margin:10px 6px 0">Tip: Sign in to save upgrades and purchases.</div>
       </div>
@@ -118,6 +119,7 @@
           <button id="leaderboardBtn">Leaderboard</button>
           <button id="onlineBtn">Online Duel (Beta)</button>
           <button id="menuFullscreenBtn">Fullscreen</button>
+          <button id="infoBtn">Game Info</button>
         </div>
         <div class="fine">
           Tip: Collect upgrade orbs mid-run. Spend Credits/Crystals in the Hangar.
@@ -282,6 +284,11 @@
         <p>Score: <span id="finalScore">0</span></p>
         <p>Wave: <span id="finalWave">1</span></p>
         <p>Rewards: <span id="finalRewards">0</span></p>
+        <div id="adRewardBox" class="adReward">
+          <div class="adReward__title">Bonus Reward</div>
+          <div id="adRewardText" class="adReward__text">Watch a short ad to earn extra rewards.</div>
+          <button id="adRewardBtn" class="btn">Watch Ad</button>
+        </div>
         <div class="row">
           <button id="restartBtn" class="btn">Play Again</button>
           <button id="toMenuBtn" class="btnGhost">Menu</button>
