Make info overlay scrollable and fullscreen

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -296,6 +296,62 @@
       </div>
     </div>
 
+    <div id="infoOverlay" class="overlay hidden">
+      <div class="panel panel--wide infoPanel">
+        <div class="panelTop">
+          <h2>Stellar Siege — Game Guide</h2>
+          <div class="panelTop__right">
+            <button id="infoFullscreenBtn" class="btnGhost">Fullscreen</button>
+            <button id="infoCloseBtn" class="btnGhost">Close</button>
+          </div>
+        </div>
+        <div class="infoSection">
+          <h3>What is Stellar Siege?</h3>
+          <p>Stellar Siege is a fast roguelite arena shooter. Survive waves, complete missions, and build your ship through upgrades and smarter tactics.</p>
+        </div>
+        <div class="infoSection">
+          <h3>Game Modes</h3>
+          <ul>
+            <li><strong>Survival</strong> — Endless waves. Earn credits quickly.</li>
+            <li><strong>Campaign</strong> — Mission objectives and unlocks.</li>
+            <li><strong>Online Duel</strong> — Competitive matches and best rewards.</li>
+          </ul>
+        </div>
+        <div class="infoSection">
+          <h3>Ships & Roles</h3>
+          <ul>
+            <li><strong>Scout</strong> — Balanced starter ship.</li>
+            <li><strong>Striker / Ranger</strong> — Faster and stronger for wave control.</li>
+            <li><strong>Astra / Warden / Valkyrie</strong> — Premium builds with higher stats and special bonuses.</li>
+          </ul>
+        </div>
+        <div class="infoSection">
+          <h3>Economy</h3>
+          <ul>
+            <li><strong>Credits</strong> — Earned by playing. Used for most upgrades and ships.</li>
+            <li><strong>Crystals</strong> — Rare. Used for premium ships and upgrades.</li>
+            <li><strong>XP</strong> — Increases your pilot level, boosting stats.</li>
+          </ul>
+        </div>
+        <div class="infoSection">
+          <h3>Upgrades</h3>
+          <p>Upgrades are permanent per ship and require Google sign‑in to sync. Each upgrade increases your stats and changes your build style.</p>
+        </div>
+        <div class="infoSection">
+          <h3>Purchases</h3>
+          <p>Crystal packs are delivered after checkout and synced to your account. Purchases and upgrades are tied to your Google account for safety.</p>
+        </div>
+        <div class="infoSection">
+          <h3>Tips</h3>
+          <ul>
+            <li>Use fullscreen for the best visibility.</li>
+            <li>Strafe and kite to survive heavy waves.</li>
+            <li>Campaign missions teach different tactics.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div id="fsHint" class="fsHint hidden">Tip: Fullscreen is more comfortable. Press F on desktop or use the Fullscreen button on mobile.</div>
   </div>
 
