Add ship upgrade visuals and stats

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -328,6 +328,7 @@
             <li><strong>Striker / Ranger</strong> — Faster and stronger for wave control.</li>
             <li><strong>Astra / Warden / Valkyrie</strong> — Premium builds with higher stats and special bonuses.</li>
           </ul>
+          <div class="infoShips"></div>
         </div>
         <div class="infoSection">
           <h3>Economy</h3>
