Fix duel identity/sync, tune economy, and add credit packs

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -167,6 +167,20 @@
               </div>
               <div class="storeRow">
                 <div>
+                  <div class="storeName">10,000 Credits</div>
+                  <div class="storeDesc">Starter credit pack</div>
+                </div>
+                <button class="btn" id="buyCredits10k">$0.99</button>
+              </div>
+              <div class="storeRow">
+                <div>
+                  <div class="storeName">65,000 Credits</div>
+                  <div class="storeDesc">Best value credit pack</div>
+                </div>
+                <button class="btn" id="buyCredits65k">$4.99</button>
+              </div>
+              <div class="storeRow">
+                <div>
                   <div class="storeName">Convert Crystals → Credits</div>
                   <div class="storeDesc">1 crystal = 200 credits</div>
                 </div>
@@ -231,7 +245,7 @@
           <div class="card">
             <h3>Matchmaking</h3>
             <div class="row">
-              <input id="roomCode" class="input" placeholder="Room code" />
+              <input id="roomCode" class="input" placeholder="Room code" autocapitalize="characters" autocomplete="off" spellcheck="false" />
               <button class="btn" id="createRoomBtn">Create</button>
               <button class="btn" id="joinRoomBtn">Join</button>
             </div>
@@ -316,6 +330,14 @@
             <li><strong>Survival</strong> — Endless waves. Earn credits quickly.</li>
             <li><strong>Campaign</strong> — Mission objectives and unlocks.</li>
             <li><strong>Online Duel</strong> — Competitive matches and best rewards.</li>
+          </ul>
+        </div>
+        <div class="infoSection">
+          <h3>Online Duel Win Rule</h3>
+          <ul>
+            <li>Each player controls their own ship in real time.</li>
+            <li>You win when the opponent ship HP reaches 0 first.</li>
+            <li>Look for <strong>YOU</strong> and <strong>OPP</strong> labels above ships to avoid confusion.</li>
           </ul>
         </div>
         <div class="infoSection">
