Add global player ranking with online win/loss tie-breakers

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -206,7 +206,7 @@
           <button class="tab" id="tabGlobal">Global (needs login)</button>
         </div>
         <div id="leaderboardList" class="leaderboard"></div>
-        <div class="fine">Global leaderboard + Google accounts are optional and require Firebase config.</div>
+        <div class="fine">Global ranking uses: Wins desc, Losses asc, XP desc, then Online Games/Best Score.</div>
       </div>
     </div>
 
