Add AdSense Unit 1 to game menu

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -136,6 +136,17 @@
           <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a> ·
           <a href="/terms.html" target="_blank" rel="noopener">Terms</a>
         </div>
+        <div class="adSlot" style="margin-top:14px" aria-label="Advertisement">
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-5266296505652960"
+               data-ad-slot="8978861106"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+        </div>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       </div>
     </div>
 
