--- a/public/game/index.html
+++ b/public/game/index.html
@@ -138,6 +138,7 @@
         </div>
         <div class="adSlot" style="margin-top:14px" aria-label="Advertisement">
           <ins class="adsbygoogle"
+               id="menuAdUnit1"
                style="display:block"
                data-ad-client="ca-pub-5266296505652960"
                data-ad-slot="8978861106"
@@ -145,7 +146,9 @@
                data-full-width-responsive="true"></ins>
         </div>
         <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
+          window.addEventListener("load", function () {
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          }, { once: true });
         </script>
       </div>
     </div>
