Fix boot loader stuck state and make start mission reliably clickable

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -27,7 +27,7 @@
       <h1>Stellar Siege</h1>
       <p id="bootLoaderText">Preparing systems...</p>
       <div class="bootLoader__bar"><div id="bootLoaderFill" class="bootLoader__fill"></div></div>
-      <button id="bootStartBtn" class="btn" disabled>Start Mission</button>
+      <button id="bootStartBtn" class="btn">Start Mission</button>
     </div>
   </div>
   <div class="ui" id="ui">
