Keep overlays on index route and harden hangar back fallback

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -166,7 +166,7 @@
           <h2>Hangar</h2>
           <div class="panelTop__right">
             <div class="pill" id="pilotPill">Pilot</div>
-            <button class="btnGhost" id="backFromHangarBtn">Back</button>
+            <button class="btnGhost" id="backFromHangarBtn" type="button" onclick="window.location.href='/game/index.html';">Back</button>
           </div>
         </div>
 
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="hangarActions">
-          <button class="btnGhost" id="hangarHomeBtn">Back To Home</button>
+          <button class="btnGhost" id="hangarHomeBtn" type="button" onclick="window.location.href='/game/index.html';">Back To Home</button>
         </div>
       </div>
     </div>
