Restore in-game loadout overlay and remove standalone hangar route

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -38,7 +38,7 @@
         <button id="menuHomeBtn" class="btnGhost">Home</button>
         <button id="menuRestartBtn" class="btnGhost">Restart</button>
         <button id="menuCampaignBtn" class="btnGhost">Campaign</button>
-        <button id="menuHangarBtn" class="btnGhost">Hangar</button>
+        <button id="menuHangarBtn" class="btnGhost">Loadout</button>
         <button id="menuLeaderboardBtn" class="btnGhost">Leaderboard</button>
         <button id="menuOnlineBtn" class="btnGhost portal-hide">Online</button>
         <button id="sideFullscreenBtn" class="btnGhost">Fullscreen</button>
@@ -136,7 +136,7 @@
         <div class="menuGrid">
           <button id="playSurvivalBtn">Play Survival</button>
           <button id="playCampaignBtn">Campaign</button>
-          <button id="hangarBtn">Hangar & Upgrades</button>
+          <button id="hangarBtn">Loadout & Upgrades</button>
           <button id="leaderboardBtn">Leaderboard</button>
           <button id="onlineBtn" class="portal-hide">Online Duel (Beta)</button>
           <button id="menuFullscreenBtn">Fullscreen</button>
@@ -151,7 +151,7 @@
         </div>
         <div class="missionBoard" id="missionBoard"></div>
         <div class="fine">
-          Tip: Collect upgrade orbs mid-run. Spend Credits/Crystals in the Hangar.
+          Tip: Collect upgrade orbs mid-run. Spend Credits/Crystals in the Loadout bay.
         </div>
         <div class="fine" style="margin-top:10px">
           <a href="/privacy.html" target="_blank" rel="noopener">Privacy</a> ·
@@ -163,10 +163,10 @@
     <div id="hangar" class="overlay hidden">
       <div class="panel panel--wide">
         <div class="panelTop">
-          <h2>Hangar</h2>
+          <h2>Loadout Bay</h2>
           <div class="panelTop__right">
             <div class="pill" id="pilotPill">Pilot</div>
-            <button class="btnGhost" id="backFromHangarBtn" type="button" onclick="window.location.href='/game/index.html';">Back</button>
+            <button class="btnGhost" id="backFromHangarBtn" type="button">Back</button>
           </div>
         </div>
 
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="hangarActions">
-          <button class="btnGhost" id="hangarHomeBtn" type="button" onclick="window.location.href='/game/index.html';">Back To Home</button>
+          <button class="btnGhost" id="hangarHomeBtn" type="button">Back To Home</button>
         </div>
       </div>
     </div>
